Incrementando interatividade com o usuário criador do cluster